--- a/games/_template/.vscode/launch.json
+++ b/games/_template/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "(Windows) Launch",
       "type": "cppvsdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/mazer.exe",
+      "program": "${workspaceFolder}/!@#PROJECT.exe",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
